--- a/content/publication/example1/cite.bib
+++ b/content/publication/example1/cite.bib
@@ -1,13 +1,9 @@
-@article{SHANG2020103692,
-title = "Network-based prioritization of cancer genes by integrative ranks from multi-omics data",
-journal = "Computers in Biology and Medicine",
-volume = "119",
-pages = "103692",
-year = "2020",
-issn = "0010-4825",
-doi = "https://doi.org/10.1016/j.compbiomed.2020.103692",
-url = "http://www.sciencedirect.com/science/article/pii/S0010482520300822",
-author = "Haixia Shang and Zhi-Ping Liu",
-keywords = "Cancer gene prioritization, Multi-omics data integration, Multiplex networks, Constrained PageRank",
-abstract = "Finding disease genes related to cancer is of great importance for diagnosis and treatment. With the development of high-throughput technologies, more and more multiple-level omics data have become available. Thus, it is urgent to develop computational methods to identify cancer genes by integrating these data. We propose an integrative rank-based method called iRank to prioritize cancer genes by integrating multi-omics data in a unified network-based framework. The method was used to identify the disease genes of hepatocellular carcinoma (HCC) in humans using the multi-omics data for HCC from TCGA after building up integrated networks in the corresponding molecular levels. The kernel of iRank is based on an improved PageRank algorithm with constraints. To demonstrate the validity and the effectiveness of the method, we performed experiments for comparison between single-level omics data and multiple omics data as well as with other algorithms: random walk (RW), random walk with restart on heterogeneous network (RWH), PRINCE and PhenoRank. We also performed a case study on another cancer, prostate adenocarcinoma (PRAD). The results indicate the effectiveness and efficiency of iRank which demonstrates the significance of integrating multi-omics data and multiplex networks in cancer gene prioritization."
-}
+@ARTICLE{8716303,
+  author={H. {Shang} and Z. {Liu}},
+  journal={IEEE/ACM Transactions on Computational Biology and Bioinformatics}, 
+  title={Prioritizing type 2 diabetes genes by weighted PageRank on bilayer heterogeneous networks}, 
+  year={2019},
+  volume={},
+  number={},
+  pages={1-1},
+  doi={10.1109/TCBB.2019.2917190}}
